# coe-hidalgo2-container-cicd-benchmarking-202503-c3b-c3b-template

./: CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
myapp/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_mpi3.cpp
